--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<h2><small><p style="color: white;">ImagineLifestyles</p></small></h2>
+					<h2 style="background-color:powderblue;"><small>ImagineLifestyles</small></h2>
 				  </a>
 				</div>
 			</figcaption>
