--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<h2 class="pink-text" style="color: pink;><small>ImagineLifestyles</small></h2>
+					<h2><small>ImagineLifestyles</small></h2>
 				  </a>
 				</div>
 			</figcaption>
