--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<<h2 style="color: white;"><small>Imagine Lifestyles</small></h2>
+					<h2><small><span>Imagine Lifestyles</span></small></h2>
 				  </a>
 				</div>
 			</figcaption>
