--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
       
       <!-- Portfolio Item-->
       <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 500px, 0px) scale3d(1, 1, 1); width: 135px; opacity: 1;" class="portfolio-item one-four 230 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/portfolio_pic2.jpg" alt="Portfolio 2"> </div>
+        <div class="portfolio_img"> <img src="img/Portfolio_Pic2.jpg" alt="Portfolio 2"> </div>
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<h2 style="color: white;"><small>Imagine Lifestyles</small></h2>
+					<h2 style="color: white;">Imagine Lifestyles</h2>
 				  </a>
 				</div>
 			</figcaption>
