--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://www.vmug.com/" class="fancybox"> 
-					<h2 style="color: sky blue;">VMUG</h2>
+					<h2 style="color: turquoise;">VMUG</h2>
 				  </a>
 				</div>
 			</figcaption>
@@ -339,7 +339,7 @@
     <!--/Portfolio Item -->   
 
     <!-- Portfolio Item-->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 500px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 230 isotope-item effect-oscar">
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 500px, 0px) scale3d(1, 1, 1); width: 100px; opacity: 1;" class="portfolio-item one-four 230 isotope-item effect-oscar">
         <div class="portfolio_img"> <img src="img/Portfolio_Pic4.jpg" alt="Website 3"> </div>
         	<figcaption>		
 				<div>
