--- a/index.html
+++ b/index.html
@@ -340,11 +340,11 @@
 
     <!-- Portfolio Item-->
       <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 500px, 0px) scale3d(1, 1, 1); width: 100px; opacity: 1;" class="portfolio-item one-four 230 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/Portfolio_Pic4.jpg" alt="Website 3"> </div>
+        <div class="portfolio_img"> <img src="img/Portfolio4.jpg" alt="Website 3"> </div>
         	<figcaption>		
 				<div>
 				  <a href="https://camporenda.com/" class="fancybox"> 
-					<h2 style="color: pink;">Camporenda</h2>
+					<h2 style="color: pink;"><small>Camporenda</small></h2>
 				  </a>
 				</div>
 			</figcaption>
@@ -372,7 +372,7 @@
 <div class="client_logos"><!--client_logos-->
   <div class="container">
 	    <h2> <font color="#FF69B4"> Specialized in... </font> </h2>
-    <ul class="fadeInRight animated wow">
+    <ul class="fadeInLeft animated wow">
       <li><a href="javascript:void(0)"><img src="img/client_logo2.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo3.png" alt=""></a></li>
       <li><a href="javascript:void(0)"><img src="img/client_logo5.png" alt=""></a></li>
