--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<h2 style="color: white;">Imagine Lifestyles</h2>
+					<h2 style="color: lime green;">Imagine Lifestyles</h2>
 				  </a>
 				</div>
 			</figcaption>
@@ -331,7 +331,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://www.vmug.com/" class="fancybox"> 
-					<h2 style="color: turquoise;">VMUG</h2>
+					<h2 style="color: white;">VMUG</h2>
 				  </a>
 				</div>
 			</figcaption>
@@ -344,7 +344,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://camporenda.com/" class="fancybox"> 
-					<h2 style="color: pink;"><small>Camporenda</small></h2>
+					<h2 style="color: pink; font-size: 14px;"><small>Camporenda</small></h2>
 				  </a>
 				</div>
 			</figcaption>
