--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<h2 style="color: lime green;">Imagine Lifestyles</h2>
+					<h2 style="color: #32CD32;">Imagine Lifestyles</h2>
 				  </a>
 				</div>
 			</figcaption>
@@ -344,7 +344,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://camporenda.com/" class="fancybox"> 
-					<h2 style="color: pink; font-size: 14px;"><small>Camporenda</small></h2>
+					<h2 style="color: pink; font-size: 25px;"><span>Camporenda</span></h2>
 				  </a>
 				</div>
 			</figcaption>
