--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<h2 style="color: #32CD32;">Imagine Lifestyles</h2>
+					<h2 style="color: #8DB600;">Imagine Lifestyles</h2>
 				  </a>
 				</div>
 			</figcaption>
