--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
 			  <li class="active"><a href="#hero_section" class="scroll-link">Home</a></li>
-			  <li><a href="#aboutMe" class="scroll-link">About Me</a></li>
-			  <li><a href="#service" class="scroll-link">Skills</a></li>
-			  <li><a href="#portfolio" class="scroll-link">Publications</a></li>
-			  <li><a href="#specialty" class="scroll-link">Specialty</a></li>
-			  <li><a href="#team" class="scroll-link">Recommendations</a></li>
-			  <li><a href="#contact" class="scroll-link">Get In Touch</a></li>
+			 <li><a href="#aboutMe" class="scroll-link" style="color: red;">About Me</a></li>
+			  <li><a href="#service" class="scroll-link" style="color: orange;">Skills</a></li>
+			  <li><a href="#portfolio" class="scroll-link" style="color: green;">Publications</a></li>
+			  <li><a href="#specialty" class="scroll-link" style="color: blue;">Specialty</a></li>
+			  <li><a href="#team" class="scroll-link" style="color: indigo;">Recommendations</a></li>
+			  <li><a href="#contact" class="scroll-link" style="color: fuchsia;">Get In Touch</a></li>
 			</ul>
       </div>
 	 </nav>
@@ -70,7 +70,7 @@
 <section id="aboutMe">
 <div class="inner_wrapper aboutMe-container fadeInLeft animated wow">
   <div class="container">
-    <h2><br><br/><br/><font color="#FF2400"> Who Am I? </font></h2>
+    <h2><br><br/><font color="#FF2400"> Who Am I? </font></h2>
 	<h6> <font color="#000000"> I am a John Jay College Graduate Student who majored in Digital Forensics and Cybersecurity </font> </h6>
     <div class="inner_section"> 
 	  <div class="row">
