--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="col-md-12">
 		   
             <div class="top_left_cont zoomIn wow animated"> 
-              <h2>Hello, my name is Udipto<br> <strong>I <i class="fa fa-heart"></i> <i class="fa fa-desktop"></i> & <i class="fa-solid fa-mobile"></i></strong></h2>
+              <h2>Hello, my name is Udipto<br> <strong>I <i class="fa fa-heart"></i> <i class="fa fa-desktop"></i> & <i class="fa fa-mobile fa-2x"></i></strong></h2>
                 <div class="underline"></div>             
               <a href="#aboutMe" class="read_more2"> Who Am I? </a> </div>
           </div> 
