--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="top_left_cont zoomIn wow animated"> 
               <h2>Hello, my name is Udipto<br> <strong>I <i class="fa fa-heart"></i> <i class="fa fa-desktop"></i> & <i class="fa fa-mobile fa-1.5x"></i></strong></h2>
                 <div class="underline"></div>             
-              <a href="#aboutMe" class="read_more2"> Who Am I? </a> </div>
+              <a href="#aboutMe" class="read_more2"> Get To Know Me! </a> </div>
           </div> 
         </div>
       </div>
@@ -51,7 +51,7 @@
         </div>
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
-			  <li class="active"><a href="#hero_section" class="scroll-link style="color: black;">Home</a></li>
+			  <li class="active"><a href="#hero_section" class="scroll-link" style="color: black;">Home</a></li>
 			 <li><a href="#aboutMe" class="scroll-link" style="color: red;">About Me</a></li>
 			  <li><a href="#service" class="scroll-link" style="color: orange;">Skills</a></li>
 			  <li><a href="#portfolio" class="scroll-link" style="color: green;">Publications</a></li>
