--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <section id="aboutMe">
 <div class="inner_wrapper aboutMe-container fadeInLeft animated wow">
   <div class="container">
-    <h2><br><br/><br><br/><br><br/><font color="#FF2400"> Who Am I? </font></h2>
+    <h2><font color="#FF2400"> Who Am I? </font></h2>
 	<h6> <font color="#000000"> I am a John Jay College Graduate Student who majored in Digital Forensics and Cybersecurity </font> </h6>
     <div class="inner_section"> 
 	  <div class="row">
