--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <header id="header_wrapper">
   <div class="container">
     <div class="header_box">
-      <div class="logo"><a href="#"><img src="img/UdiptoLogo.png" height="70px" width="128px" a="logo"></a></div>
+      <div class="logo"><a href="#"><img src="img/Udipto.png" height="70px" width="128px" a="logo"></a></div>
 	  <nav class="navbar navbar-inverse" role="navigation">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
