--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://camporenda.com/" class="fancybox"> 
-					<h3 style="color: #FC8EAC;">Camporenda</h3>
+					<h2 style="color: #FC8EAC;"><p style="font-size: 16px;">Camporenda</p></h2>
 				  </a>
 				</div>
 			</figcaption>
