--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<h2 style="color: #8DB600;">Imagine Lifestyles</h2>
+					<p style="color: #8DB600;">Imagine Lifestyles</p>
 				  </a>
 				</div>
 			</figcaption>
@@ -332,7 +332,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://www.vmug.com/" class="fancybox"> 
-					<h2 style="color: white;">VMUG</h2>
+					<p style="color: white;">VMUG</p>
 				  </a>
 				</div>
 			</figcaption>
