--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<p style="color: #8DB600;">Imagine Lifestyles</p>
+					<h2 style="color: #8DB600;">Imagine Lifestyles</h2>
 				  </a>
 				</div>
 			</figcaption>
@@ -332,7 +332,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://www.vmug.com/" class="fancybox"> 
-					<p style="color: white;">VMUG</p>
+					<h2 style="color: white;">VMUG</h2>
 				  </a>
 				</div>
 			</figcaption>
@@ -345,7 +345,7 @@
         	<figcaption>		
 				<div>
 				  <a href="https://camporenda.com/" class="fancybox"> 
-					<p style="font-size: 20px; color: #FC8EAC;">Camporenda</p>
+					<h2 style="font-size: 20px; color: #FC8EAC;">Camporenda</h2>
 				  </a>
 				</div>
 			</figcaption>
