--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="inner_wrapper aboutMe-container fadeInLeft animated wow">
   <div class="container">
     <h2><font color="#FF2400"><br><br/> Who Am I? </font></h2>
-	<h6> <font color="#000000"> I am a John Jay College Graduate Student who majored in Digital Forensics and Cybersecurity </font> </h6>
+	<h6> <font color="#000000"> I am a Field Technician who currently works with the NYC Department of Education </font> </h6>
     <div class="inner_section"> 
 	  <div class="row">
 						<div class="col-lg-12 about-us">
@@ -81,11 +81,11 @@
                   
 									<h3> <font color="#880808"> I am a Soon-To-Be Cybersecurity Specialist </font> </h3>
 									<p> <font color="#000000">
-                    As a recent Per Scholas student, I developed my skills in cybersecurity, web development, and software modification. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York City. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cybersecurity professional and help prevent the ongoing cybercrime that is currently happening. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizons and applying lessons learned in classrooms to real-life scenarios, my career aspiration will continue to lie in utilizing cybersecurity to serve people around the world, whether in the financial sector by preventing cyberattacks or in the government sector by fighting cyberterrorism.
+                    As a Per Scholas graduate, I developed my skills in digital forensics, cybersecurity, web development, and software modifications since my Undergraduate Days at John Jay College. A cosmopolitan at heart and an aspiring adventurer, I was born in Chittagong, Bangladesh, and grew up in New York City. After graduating from Townsend Harris High School, I decided to attend John Jay College (JJC) because I aspire to be a cybersecurity professional and help prevent the ongoing cybercrime and digital crisis that is currently happening. Some of my strengths include being curious, accountable, and resilient. As I look forward to expanding my horizons and applying lessons learned in classrooms to real-life scenarios, my career aspiration will continue to lie in utilizing cybersecurity to serve people around the world, whether in the financial sector by preventing cyberattacks or in the government sector by fighting cyberterrorism.
 									</font> </p>
 
 									<ul class="about-us-list"> 
-										<li class="points"> <font color="#000000"> I graduated from John Jay with my Master's in Digital Forensics and Cybersecurity</font> </li>
+										<li class="points"> <font color="#000000"> I am currently studying for the CISA (Certified Information Systems Auditor), hoping to take it in May 2026</font> </li>
 										<li class="points"> <font color="#000000"> I worked with Macguyver Tech as a Project Intern </font> </li>
 										<li class="points"> <font color="#000000"> I currently hold a CompTIA Cybersecurity Analyst (CySA+) certification </font> </li>
 										<li class="points"> <font color="#000000"> I am a Core Certified User for Splunk </font> </li>
@@ -112,7 +112,7 @@
     <div class="service_wrapper">
       <div class="row">
         <div class="col-md-3">
-		<div class="service_icon delay-03s animated wow  zoomIn"> <span><i class="fa fa-lightbulb-o"></i></span> </div>
+		<div class="service_icon delay-03s animated wow zoomIn"> <span><i class="fa fa-lightbulb-o"></i></span> </div>
           <div class="service_block">
             
             <h3 class="animated fadeInUp wow"> <font color="#FFC000"> Resourceful </font> </h3>
@@ -160,7 +160,7 @@
     <!-- Title -->
     <div class="section-title">
       <h2> <br/> <font color="#228B22"> Publications </font> </h2>
-	<h6> <font color="#000000"> These are my publications during my undergraduate and graduate studies as well as the websites I have worked with... </font> </h6>
+	<h6> <font color="#000000"> These are my publications during my undergraduate and graduate studies, as well as the websites I have worked with... </font> </h6>
 	  
     </div>
     <!--/Title --> 
