--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
-			  <li class="active"><a href="#hero_section" class="scroll-link" style="color: black;">Home</a></li>
+			  <li class="active"><a href="#hero_section" class="scroll-link" style="color: #87CEEB;">Home</a></li>
 			 <li><a href="#aboutMe" class="scroll-link" style="color: red;">About Me</a></li>
 			  <li><a href="#service" class="scroll-link" style="color: orange;">Skills</a></li>
 			  <li><a href="#portfolio" class="scroll-link" style="color: green;">Publications</a></li>
