--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			  <li><a href="#portfolio" class="scroll-link" style="color: green;">Publications</a></li>
 			  <li><a href="#specialty" class="scroll-link" style="color: blue;">Specialty</a></li>
 			  <li><a href="#team" class="scroll-link" style="color: indigo;">Recommendations</a></li>
-			  <li><a href="#contact" class="scroll-link" style="color: fuchsia;">Get In Touch</a></li>
+			  <li><a href="#contact" class="scroll-link";>Get In Touch</a></li>
 			</ul>
       </div>
 	 </nav>
