--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
           <div class="col-md-12">
 		   
-            <div class="animate__flash"> 
+            <div class="top_left_cont flash wow animated"> 
               <h2>Hello, my name is Udipto<br> <strong>I <i class="fa fa-heart"></i> <i class="fa fa-desktop"></i> & <i class="fa fa-phone"></i></strong></h2>
                 <div class="underline"></div>             
               <a href="#aboutMe" class="read_more2" class="scroll-link"> Get To Know Me! </a> </div>
