--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         </div>
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
 			<ul class="nav navbar-nav" id="mainNav">
-			  <li class="active"><a href="#hero_section" class="scroll-link" style="color: #228B22;">Home</a></li>
-			 <li><a href="#aboutMe" class="scroll-link" style="color: red;">About Me</a></li>
-			  <li><a href="#service" class="scroll-link" style="color: orange;">Skills</a></li>
-			  <li><a href="#portfolio" class="scroll-link" style="color: green;">Publications</a></li>
-			  <li><a href="#specialty" class="scroll-link" style="color: blue;">Specialty</a></li>
-			  <li><a href="#team" class="scroll-link" style="color: indigo;">Recommendations</a></li>
-			  <li><a href="#contact" class="scroll-link" style="color: #448EE4;">Get In Touch</a></li>
+			  <li class="active"><a href="#hero_section" class="scroll-link";>Home</a></li>
+			 <li><a href="#aboutMe" class="scroll-link";>About Me</a></li>
+			  <li><a href="#service" class="scroll-link";>Skills</a></li>
+			  <li><a href="#portfolio" class="scroll-link";>Publications</a></li>
+			  <li><a href="#specialty" class="scroll-link";>Specialty</a></li>
+			  <li><a href="#team" class="scroll-link";>Recommendations</a></li>
+			  <li><a href="#contact" class="scroll-link";>Get In Touch</a></li>
 			</ul>
       </div>
 	 </nav>
