--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="top_left_cont tada wow animated"> 
               <h2>Hello, my name is Udipto<br> <strong>I <i class="fa fa-heart"></i> <i class="fa fa-desktop"></i> & <i class="fa fa-phone"></i></strong></h2>
                 <div class="underline"></div>             
-              <a href="#aboutMe" class="read_more2" class="scroll-link"> Get To Know Me! </a> </div>
+              <a href="#aboutMe" class="read_more2 scroll-link"> Get To Know Me! </a> </div>
           </div> 
         </div>
       </div>
@@ -70,7 +70,7 @@
 <section id="aboutMe">
 <div class="inner_wrapper aboutMe-container fadeInLeft animated wow">
   <div class="container">
-    <h2><font color="#FF2400"><br><br/> Who Am I? </font></h2>
+    <h2 class="section-title"> Who Am I? </h2>
 	<h6> <font color="#000000"> I am a Field Technician who currently works with the NYC Department of Education </font> </h6>
     <div class="inner_section"> 
 	  <div class="row">
