--- a/index.html
+++ b/index.html
@@ -235,30 +235,47 @@ html, body {
 <!--Service-->
 
 <!-- Portfolio -->
-<section id="portfolio" class="content"> 
+<section id="Portfolio" class="content"> 
+  <!-- Container -->
   <div class="container portfolio_title"> 
+    <!-- Title -->
     <div class="section-title">
-      <h2><br/><span style="color:#228B22;">Technical Projects</span></h2>
-      <h6><span style="color:#000000;">Projects, publications, and websites from my academic and professional journey.</span></h6>
+      <h2>Publications</h2>
+	<h6>These are my publications during my undergraduate and graduate studies</h6>
     </div>
+    <!--/Title --> 
   </div>
+  <!-- Container -->
   <div class="portfolio-top"></div>
   <!-- Portfolio Filters -->
   <div class="portfolio"> 
     <div id="filters" class="sixteen columns">
       <ul class="clearfix">
-        <li><a id="all" href="#" data-filter="*" class="active"><h5>All</h5></a></li>
-        <li><a href="#" data-filter=".761"><h5>Cyber Risk Assessment</h5></a></li>
-        <li><a href="#" data-filter=".230"><h5>Websites</h5></a></li>
-        <li><a href="#" data-filter=".401"><h5>Capstone Projects</h5></a></li>
-        <li><a href="#" data-filter=".374"><h5>Programming Languages</h5></a></li>
-        <li><a href="#" data-filter=".727"><h5>Cybercriminology</h5></a></li>
+        <li><a id="all" href="#" data-filter="*" class="active">
+          <h5>All</h5>
+          </a></li>
+        <li><a class="" href="#" data-filter=".761">
+          <h5>FCM 761</h5>
+          </a></li>
+        <li><a class="" href="#" data-filter=".230">
+          <h5>MacGuyver Websites</h5>
+          </a></li>
+        <li><a class="" href="#" data-filter=".401">
+          <h5>CSCI 401</h5>
+          </a></li>
+        <li><a class="" href="#" data-filter=".374">
+          <h5>CSCI 374</h5>
+          </a></li>
+        <li><a class="" href="#" data-filter=".727">
+          <h5>FCM 727</h5>
+          </a></li>
       </ul>
     </div>
- <!-- Portfolio Wrapper -->
+    <!--/Portfolio Filters -->
+    <!-- Portfolio Wrapper -->
     <div class="isotope fadeInLeft animated wow grid" style="position: relative; overflow: hidden; height: 480px;" id="portfolio_wrapper">  
       <!-- Portfolio Item -->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 761 isotope-item effect-oscar">
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   761 isotope-item effect-oscar">
         <div class="portfolio_img"> 
 		<img src="img/portfolio_pic1.jpg" alt="Portfolio 1" width=auto height=auto> </div> 
 			<figcaption>		
@@ -271,12 +288,12 @@ html, body {
         </figure>
       <!--/Portfolio Item --> 
       <!-- Portfolio Item -->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 401 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/portfolio_pic3.jpg" alt="Portfolio 2"> </div>
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  401 isotope-item effect-oscar">
+        <div class="portfolio_img"> <img src="img/portfolio_pic3.jpg" alt="Portfolio 3"> </div>
        <figcaption>		
 				<div>
 				  <a href="CSCI 401 Smart Cities Final Draft.pdf" class="fancybox"> 
-					<h2>Essay <span>2</span></h2>
+					<h2>Essay <span>3</span></h2>
 							<p></p>
 				  </a>
 				</div>
@@ -285,11 +302,11 @@ html, body {
       <!--/Portfolio Item--> 
       <!-- Portfolio Item-->
       <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(1011px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 374 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/portfolio_pic4.jpg" alt="Portfolio 3"> </div>
+        <div class="portfolio_img"> <img src="img/portfolio_pic4.jpg" alt="Portfolio 4"> </div>
          <figcaption>		
 				<div>
 				  <a href="Chowdhury, Udipto__ HWs 8-10 CSCI 374 '21.pdf" class="fancybox"> 
-					<h2>Essay <span>3</span></h2>
+					<h2>Essay <span>4</span></h2>
 							<p></p>
 				  </a>
 				</div>
@@ -297,24 +314,11 @@ html, body {
       </figure>
       <!-- Portfolio Item --> 
       <!-- Portfolio Item -->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 761 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/portfolio_pic5.jpg" alt="Portfolio 4"> </div>
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  761 isotope-item effect-oscar">
+        <div class="portfolio_img"> <img src="img/portfolio_pic5.jpg" alt="Portfolio 5"> </div>
        <figcaption>		
 				<div>
 				  <a href="Chowdhury, Udipto - Midterm FCM 761.pdf" class="fancybox"> 
-					<h2>Essay <span>4</span></h2>
-							<p></p>
-				  </a>
-				</div>
-			</figcaption>
-      </figure>
-      <!--/Portfolio Item --> 
-      <!-- Portfolio Item -->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 761 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/portfolio_pic6.jpg" alt="Portfolio 5"> </div>
-       <figcaption>		
-				<div>
-				  <a href="Chowdhury, Udipto - FCM 761 Assignment 10.pdf" class="fancybox"> 
 					<h2>Essay <span>5</span></h2>
 							<p></p>
 				  </a>
@@ -322,14 +326,26 @@ html, body {
 			</figcaption>
       </figure>
       <!--/Portfolio Item --> 
-      
+      <!-- Portfolio Item -->
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  761 isotope-item effect-oscar">
+        <div class="portfolio_img"> <img src="img/portfolio_pic6.jpg" alt="Portfolio 6"> </div>
+       <figcaption>		
+				<div>
+				  <a href="Chowdhury, Udipto - FCM 761 Assignment 10.pdf" class="fancybox"> 
+					<h2>Essay <span>6</span></h2>
+							<p></p>
+				  </a>
+				</div>
+			</figcaption>
+      </figure>
+      <!--/Portfolio Item --> 
       <!-- Portfolio Item  -->
       <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 727 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/portfolio_pic7.jpg" alt="Portfolio 6"> </div>       
+        <div class="portfolio_img"> <img src="img/portfolio_pic7.jpg" alt="Portfolio 7"> </div>       
        <figcaption>		
 				<div>
 				  <a href="Chowdhury, Udipto - FCM 727 Final Paper.pdf" class="fancybox"> 
-					<h2>Essay <span>6</span></h2>
+					<h2>Essay <span>7</span></h2>
 							<p></p>
 				  </a>
 				</div>
@@ -338,74 +354,39 @@ html, body {
       <!--/Portfolio Item --> 
       <!-- Portfolio Item -->
       <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(1011px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 727 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/portfolio_pic8.jpg" alt="Portfolio 7"> </div>       
+        <div class="portfolio_img"> <img src="img/portfolio_pic8.jpg" alt="Portfolio 8"> </div>       
       <figcaption>		
 				<div>
 				  <a href="Chowdhury, Udipto - Optional FCM 727.pdf" class="fancybox"> 
-					<h2>Essay <span>7</span></h2>
+					<h2>Essay <span>8</span></h2>
 							<p></p>
 				  </a>
 				</div>
 			</figcaption>
         </figure>
-      <!--/Portfolio Item -->
+      <!--/Portfolio Item --> 
       <!-- Portfolio Item -->
-            <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(1011px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 761 isotope-item effect-oscar">
-              <div class="portfolio_img"> <img src="img/portfolio_pic9.jpg" alt="Portfolio 8"> </div>       
-            <figcaption>		
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(1011px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 761 isotope-item effect-oscar">
+        <div class="portfolio_img"> <img src="img/portfolio_pic9.jpg" alt="Portfolio 8"> </div>       
+      <figcaption>		
               <div>
                 <a href="Chowdhury, Udipto - FCM 761 Final.pdf" class="fancybox"> 
-                <h2>Essay <span>8</span></h2>
+                <h2>Essay <span>9</span></h2>
                     <p></p>
                 </a>
               </div>
             </figcaption>
-        </figure>
-      <!--/Portfolio Item --> 
-      <!-- Portfolio Item-->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 500px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 230 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/Portfolio_Pic2.jpg" alt="Website 1"> </div>
-        	<figcaption>		
-				<div>
-				  <a href="https://imaginelifestyles.com/" class="fancybox"> 
-					<h2 style="color: #8DB600;">Imagine Lifestyles</h2>
-				  </a>
-				</div>
-			</figcaption>
-        </figure>
-    <!--/Portfolio Item -->   
-    <!-- Portfolio Item-->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 500px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four 230 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/Portfolio_Pic3.jpg" alt="Website 2"> </div>
-        	<figcaption>		
-				<div>
-				  <a href="https://www.vmug.com/" class="fancybox"> 
-					<h2 style="color: white;">VMUG</h2>
-				  </a>
-				</div>
-			</figcaption>
-        </figure>
-    <!--/Portfolio Item -->   
-    <!-- Portfolio Item-->
-      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 500px, 0px) scale3d(1, 1, 1); width: 100px; opacity: 1;" class="portfolio-item one-four 230 isotope-item effect-oscar">
-        <div class="portfolio_img"> <img src="img/Portfolio4.jpg" alt="Website 3"> </div>
-        	<figcaption>		
-				<div>
-				  <a href="https://camporenda.com/" class="fancybox"> 
-					<h2 style="font-size: 30px; color: #FC8EAC;">Camporenda</h2>
-				  </a>
-				</div>
-			</figcaption>
-        </figure>
-    <!-- Portfolio Wrapper -->
-    <div class="isotope fadeInLeft animated wow grid" style="position: relative; overflow: hidden; height: 480px;" id="portfolio_wrapper">  
+              </figure>
+            <!--/Portfolio Item --> 
     </div>
     <!--/Portfolio Wrapper --> 
-    <div class="portfolio_btm"></div>
-    <div id="project_container">
-      <div class="clear"></div>
-      <div id="project_data"></div>
-    </div>
+  </div>
+  <!--/Portfolio Filters -->
+  <div class="portfolio_btm"></div>
+  <div id="project_container">
+    <div class="clear"></div>
+    <div id="project_data"></div>
+  </div>
 </section>
 <!--/Portfolio --> 
 
