--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ html, body {
             <div class="top_left_cont tada wow animated"> 
               <h2>Hello, my name is Udipto<br> <strong>I <i class="fa fa-heart"></i> <i class="fa fa-desktop"></i> & <i class="fa fa-shield"></i></strong></h2>
                 <div class="underline"></div>             
-              <a href="#aboutMe" class="read_more2" class="scroll-link"> Get To Know About Me! </a> </div>
+              <a href="#aboutMe" class="read_more2" class="scroll-link"> Get To Know Me! </a> </div>
           </div> 
         </div>
       </div>
