--- a/index.html
+++ b/index.html
@@ -355,14 +355,14 @@ html, body {
 <section class="page_section" id="specialty">
 <div class="client_logos">
   <div class="container">
-      <h2> <font color="#FF69B4"> Specialized in... </font> </h2>
+      <h2> <font color="#40E0D0"> Specialized in... </font> </h2>
     <ul class="fadeInLeft animated wow">
-      <li><a href="javascript:void(0)"><img src="img/client_logo2.png" alt=""></a></li>
-      <li><a href="javascript:void(0)"><img src="img/client_logo3.png" alt=""></a></li>
-      <li><a href="javascript:void(0)"><img src="img/client_logo5.png" alt=""></a></li>
-      <li><a href="javascript:void(0)"><img src="img/sony-128.png" alt=""></a></li>
-      <li><a href="javascript:void(0)"><img src="img/google-128.png" alt=""></a></li>
-      <li><a href="javascript:void(0)"><img src="img/nokia-1-logo-black-and-white.png" height="120px" width="120px" alt=""></a></li>
+      <li><a href="https://www.android.com/"><img src="img/client_logo2.png" alt=""></a></li>
+      <li><a href="https://www.samsung.com/us/"><img src="img/client_logo3.png" alt=""></a></li>
+      <li><a href="https://www.microsoft.com/en-us/"><img src="img/client_logo5.png" alt=""></a></li>
+      <li><a href="https://www.sony.com/en/"><img src="img/sony-128.png" alt=""></a></li>
+      <li><a href="https://workspace.google.com/"><img src="img/google-128.png" alt=""></a></li>
+      <li><a href="https://www.nokia.com/"><img src="img/nokia-1-logo-black-and-white.png" height="120px" width="120px" alt=""></a></li>
     </ul>
   </div>
 </div>
