Update resume links in index.html

--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@ html, body {
                         </div>
           <ul class="references">
             <li class="linkedin animated bounceIn wow fa-2x delay-01s"><a href="https://www.linkedin.com/in/udipto2000/"><i class="fa fa-linkedin" style="color: sky blue;"></i></a></li>
-      <li class="briefcase animated bounceIn wow fa-2x delay-02s"><a href="Udipto Chowdhury Resume 2025 v2.pdf"><i class="fa fa-briefcase" style="color: yellow;"></i></a></li>
-      <li class="key animated bounceIn wow fa-2x delay-03s"><a href="Udipto Chowdhury Technical Resume 2025 v2.1.pdf"><i class="fa fa-key" style="color: orange;"></i></a></li>
+      <li class="briefcase animated bounceIn wow fa-2x delay-02s"><a href="Udipto Chowdhury Resume 2025 v2.3.pdf"><i class="fa fa-briefcase" style="color: yellow;"></i></a></li>
+      <li class="key animated bounceIn wow fa-2x delay-03s"><a href="Udipto Chowdhury Technical Resume 2025 v2.0"><i class="fa fa-key" style="color: orange;"></i></a></li>
       <li class="file animated bounceIn wow fa-2x delay-04s"><a href="Cover Letter_Udipto Chowdhury_Sample.pdf"><i class="fa fa-file" style="color: green;"></i></a></li> 
           </ul>
         </div>
