Fix color style for Technical Resume icon

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ html, body {
             <li class="linkedin animated bounceIn wow fa-2x delay-01s"><a href="https://www.linkedin.com/in/udipto2000/"><i class="fa fa-linkedin" style="color: sky blue;"></i></a></li>
 			<br>  
       		<li class="briefcase animated bounceIn wow fa-2x delay-02s"><a href="Udipto Chowdhury Resume 2025 v2.3.pdf"><i class="fa fa-briefcase" style="color: brown;"><h2 style="font-size: 15px; color: #FC8EAC;">General Resume</h2></i></a></li>
-      		<li class="key animated bounceIn wow fa-2x delay-03s"><a href="Udipto Chowdhury Technical Resume 2025 v2.0.pdf"><i class="fa fa-key" style="color: gold yellow;"><h2 style="font-size: 15px; color: #00674F;">Technical Resume</h2></i></a></li>
+      		<li class="key animated bounceIn wow fa-2x delay-03s"><a href="Udipto Chowdhury Technical Resume 2025 v2.0.pdf"><i class="fa fa-key" style="color: yellow;"><h2 style="font-size: 15px; color: #00674F;">Technical Resume</h2></i></a></li>
           </ul>
         </div>
       </div>
